[tool.poetry]
name = "joinleavebot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
discord = "^2.3.2"
python-dotenv = "^1.0.0"
pynacl = "^1.5.0"
ffmpeg-python = "^0.2.0"
eyed3 = "^0.9.7"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"